<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/westsidejow"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Dark"
            />

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_shisha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_cards"
            app:cardElevation="1dp">

            <LinearLayout
                android:id="@+id/hookahs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/shishaslbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/shisha_s"
                    android:textSize="@dimen/font_size"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/shishasbtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_size"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/dranklbl"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/shishabt" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_cards"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/dranklbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shishasbtn"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="centerCrop"
                    android:text="@string/dranken"
                    android:textSize="@dimen/font_size" />

                <ImageView
                    android:id="@+id/drankbtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_size"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/dranklbl"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinksvthr" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_cards"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/snackslbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shishasbtn"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="centerCrop"
                    android:text="@string/snacks"
                    android:textSize="@dimen/font_size" />

                <ImageView
                    android:id="@+id/snacksbtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_size"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/dranklbl"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/snacks" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/padding_cards"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/dessertlbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/shishasbtn"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:scaleType="centerCrop"
                    android:text="@string/desserts"
                    android:textSize="@dimen/font_size" />

                <ImageView
                    android:id="@+id/dessertbtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_size"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/dranklbl"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/desserts" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </TableLayout>
</ScrollView>